[package]
name = "scarb-artifacts"
version = "1.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
assert_fs.workspace = true
camino.workspace = true
indoc.workspace = true
test-collector = { path = "../test-collector" }
serde_json.workspace = true
serde.workspace = true
scarb-metadata.workspace = true

[lib]
name = "scarb_artifacts"
