[package]
name = "shared"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
starknet-types-core.workspace = true
cairo-lang-runner.workspace = true
console.workspace = true
semver.workspace = true
starknet.workspace = true
url.workspace = true
regex.workspace = true
snapbox.workspace = true
indicatif.workspace = true
clap.workspace = true
clap_complete.workspace = true

[features]
testing = []
