[package]
name = "shared"
version = "0.1.0"
edition.workspace = true

[dependencies]
starknet_api.workspace = true
anyhow.workspace = true
starknet-types-core.workspace = true
console.workspace = true
semver.workspace = true
starknet.workspace = true
url.workspace = true
regex.workspace = true
snapbox.workspace = true
indicatif.workspace = true
clap.workspace = true
clap_complete.workspace = true
cairo-vm.workspace = true
num-traits.workspace = true
foundry-ui ={ path = "../foundry-ui" }

[features]
testing = []
