[package]
name = "sncast"
description = "sncast - a Starknet Foundry CLI client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
starknet.workspace = true
tokio.workspace = true
url.workspace = true
rand.workspace = true
scarb-metadata.workspace = true
thiserror.workspace = true
primitive-types.workspace = true
shellexpand.workspace = true
toml.workspace = true
rpassword.workspace = true
promptly.workspace = true
scarb-api = { path = "../scarb-api" }
scarb-ui.workspace = true
reqwest.workspace = true
indoc.workspace = true
tempfile.workspace = true
runtime = { path = "../runtime" }
conversions = { path = "../conversions" }
data-transformer = { path = "../data-transformer" }
configuration = { path = "../configuration" }
shared = { path = "../shared" }
cairo-lang-runner.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-parser.workspace = true
cairo-lang-syntax.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-filesystem.workspace = true
itertools.workspace = true
num-traits.workspace = true
num-bigint.workspace = true
starknet-types-core.workspace = true
cairo-vm.workspace = true
blockifier.workspace = true
semver.workspace = true
console.workspace = true
sha3.workspace = true
base16ct.workspace = true
starknet-crypto.workspace = true
async-trait.workspace = true
serde_path_to_error.workspace = true
walkdir.workspace = true
const-hex.workspace = true
regex.workspace = true
dirs = "5.0.1"

[dev-dependencies]
ctor.workspace = true
snapbox.workspace = true
indoc.workspace = true
project-root.workspace = true
tempfile.workspace = true
test-case.workspace = true
fs_extra.workspace = true
wiremock.workspace = true

[[bin]]
name = "sncast"
path = "src/main.rs"
