[package]
name = "sncast"
description = "sncast - a Starknet Foundry CLI client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
bigdecimal.workspace = true
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
serde_json.workspace = true
serde.workspace = true
starknet.workspace = true
tokio.workspace = true
url.workspace = true
rand.workspace = true
scarb-metadata.workspace = true
thiserror.workspace = true
shellexpand.workspace = true
toml.workspace = true
rpassword.workspace = true
promptly.workspace = true
scarb-api = { path = "../scarb-api" }
scarb-ui.workspace = true
reqwest.workspace = true
indoc.workspace = true
tempfile.workspace = true
runtime = { path = "../runtime" }
conversions = { path = "../conversions" }
data-transformer = { path = "../data-transformer" }
configuration = { path = "../configuration" }
shared = { path = "../shared" }
forge_runner = { path = "../forge-runner" }
cairo-lang-runner = "2.11.2"
cairo-lang-runnable-utils = "2.11.2"
cairo-lang-utils.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-casm.workspace = true
itertools.workspace = true
starknet-types-core.workspace = true
cairo-vm.workspace = true
blockifier.workspace = true
semver.workspace = true
sha3.workspace = true
base16ct.workspace = true
starknet-crypto.workspace = true
async-trait.workspace = true
serde_path_to_error.workspace = true
walkdir.workspace = true
const-hex.workspace = true
regex.workspace = true
dirs.workspace = true
dialoguer.workspace = true
toml_edit.workspace = true
num-traits.workspace = true
foundry-ui = { path = "../foundry-ui" }

[dev-dependencies]
ctor.workspace = true
snapbox.workspace = true
indoc.workspace = true
project-root.workspace = true
tempfile.workspace = true
test-case.workspace = true
fs_extra.workspace = true
wiremock.workspace = true
docs = { workspace = true, features = ["testing"] }
shared = { path = "../shared", features = ["testing"] }
packages_validation = { path = "../testing/packages_validation" }

[features]
default = []
scarb_since_2_10 = ["packages_validation/scarb_since_2_10"]

[[bin]]
name = "sncast"
path = "src/main.rs"
