[package]
name = "snforge_scarb_plugin"
version = "0.45.0"
edition = "2021"
publish = false
rust-version = "1.80.1"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
    cairo-lang-macro = { git = "https://github.com/software-mansion/scarb.git", rev = "1685edcff18e262203ee6e73af63b64366559738" }
    cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo", rev = "b923d52015135c5384759472245d62aa9f6a4be3" }
    cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", rev = "b923d52015135c5384759472245d62aa9f6a4be3" }
    cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo", rev = "b923d52015135c5384759472245d62aa9f6a4be3" }
cairo-lang-primitive-token = "1"
url = "=2.5.4"
indoc = "=2.0.5"
smol_str = "=0.3.2"
num-bigint = "=0.4.6"

[dev-dependencies]
cairo-lang-formatter = { git = "https://github.com/starkware-libs/cairo", rev = "b923d52015135c5384759472245d62aa9f6a4be3" }
