[package]
name = "snforge_scarb_plugin"
version = "0.47.0"
edition = "2024"
publish = false
rust-version = "1.87.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
cairo-lang-macro = "0.2.0"
cairo-lang-parser = "2.12.0"
cairo-lang-utils = "2.12.0"
cairo-lang-syntax = "2.12.0"
cairo-lang-primitive-token = "1"
url = "=2.5.4"
indoc = "=2.0.5"
smol_str = "=0.3.2"
num-bigint = "=0.4.6"

[dev-dependencies]
cairo-lang-formatter = "2.12.0"
