[package]
name = "snforge_scarb_plugin"
version = "0.51.2"
edition = "2024"
publish = false
rust-version = "1.87.0"

[lib]
crate-type = ["rlib", "cdylib"]

[profile.ci]
inherits = "release"
debug-assertions = true

[dependencies]
cairo-lang-macro = "0.2.1"
cairo-lang-parser = "=2.12.3"
cairo-lang-utils = "=2.12.3"
cairo-lang-syntax = "=2.12.3"
cairo-lang-primitive-token = "1"
url = "=2.5.4"
indoc = "=2.0.5"
smol_str = "=0.3.2"
num-bigint = "=0.4.6"
regex = "1.11.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
cairo-lang-formatter = "=2.12.3"
