[package]
name = "test-collector"
version = "1.0.0"
edition = "2021"

[features]
testing = []

[dependencies]
rayon.workspace = true

cairo-lang-casm.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-debug.workspace = true
cairo-lang-defs.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-lowering.workspace = true
cairo-lang-test-runner.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-project.workspace = true
cairo-lang-sierra-ap-change.workspace = true
cairo-lang-sierra-gas.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-sierra-generator.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-syntax.workspace = true
cairo-lang-utils.workspace = true
anyhow.workspace = true
cairo-vm.workspace = true
cairo-felt.workspace = true
smol_str = { version = "0.2.0", features = ["serde"] }
itertools = "0.10.3"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.32"
serde_json = "1.0"


[lib]
name = "test_collector"
