[package]
name = "universal-sierra-compiler-api"
version = "1.0.0"
edition.workspace = true

[dependencies]
shared.workspace = true
serde.workspace = true
serde_json.workspace = true
which.workspace = true
tempfile.workspace = true
num-bigint.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-starknet-classes.workspace = true
tracing.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
uv-once-map.workspace = true
anyhow.workspace = true
