[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
shared.workspace = true
blockifier.workspace = true
cairo-vm.workspace = true
assert_fs.workspace = true
camino.workspace = true
indoc.workspace = true
scarb-metadata.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-filesystem.workspace = true
serde_json.workspace = true
serde.workspace = true
tempfile.workspace = true
tokio.workspace = true
project-root.workspace = true
regex.workspace = true
snapbox.workspace = true
semver.workspace = true
forge = { path = "../../forge" }
scarb-api = { path = "../../scarb-api" }
forge_runner = { path = "../../forge-runner" }
cheatnet = { path = "../../cheatnet" }
