[package]
name = "test_utils"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
assert_non_exact_gas = []

[dependencies]
walkdir.workspace = true
anyhow.workspace = true
shared.workspace = true
blockifier.workspace = true
cairo-vm.workspace = true
assert_fs.workspace = true
camino.workspace = true
indoc.workspace = true
tempfile.workspace = true
tokio.workspace = true
project-root.workspace = true
semver.workspace = true
starknet_api.workspace = true
forge = { path = "../../forge" }
scarb-api = { path = "../../scarb-api" }
forge_runner = { path = "../../forge-runner" }
cheatnet = { path = "../../cheatnet" }
foundry-ui = { path = "../../foundry-ui" }
