[package]
name = "cast"
description = "Cast - a starknet-foundry CLI client"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
camino = "1.1.4"
clap = { version = "4.3.0", features = ["derive"] }
console = "0.15.7"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
starknet = "0.4.0"
tokio = { version = "1.28.2", features = ["full"] }
url = "2.2.2"
rand = "0.8.5"
scarb-metadata = "1.4.2"
scarb = "0.5.0"
primitive-types = "0.12.1"
shellexpand = "3.1.0"
toml = "0.5.2"
project-root = "0.2.2"
which = "4.4.0"

[dev-dependencies]
ctor = "0.2.2"
snapbox = "0.4.11"
indoc = "2"
url = "2.4.0"
reqwest = "0.11.18"
test-case = "3.1.0"
