[package]
name = "cheatable-starknet"
version = "1.0.0"
edition = "2021"

[features]
testing = []

[dependencies]
anyhow.workspace = true
blockifier.workspace = true
camino.workspace = true
include_dir.workspace = true
starknet_api.workspace = true
cairo-felt = "0.8.1"
tempfile.workspace = true
cairo-felt-blockifier = { path = "../compatibility/cairo-felt-blockifier" }
cairo-lang-casm = "2.0.0"
cairo-lang-runner = "2.0.0"
cairo-vm = "0.6"

[lib]
name = "cheatable_starknet"
