[package]
name = "scarb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino.workspace = true
anyhow.workspace = true
test-collector = { path = "../test-collector" }
scarb-metadata = "1.4.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
